--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,7 +20,7 @@
 
     }
   ],
-  "start_url": "http://localhost:3000/index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
