--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Diani App",
+  "name": "One Tap, One App",
   "icons": [
     {
       "src": "maskable_icon_x48.png",
