--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-add-to-homescreen": "^1.1.0",
     "react-animated-text-content": "^1.0.1",
     "react-animation-on-scroll": "^5.1.0",
+    "react-clear-browser-cache": "^0.2.3",
     "react-collapsible": "^2.10.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
@@ -71,7 +72,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prebuild": "npm run generate-build-meta",
+    "generate-build-meta": "node ./node_modules/react-clear-browser-cache/bin/cli.js"
   },
   "eslintConfig": {
     "extends": [
