--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Diani App",
-  "name": "One Tap, One App",
+  "short_name": "DianiApp",
+  "name": "DianiApp",
   "icons": [
     {
       "src": "maskable_icon_x48.png",
