--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-animation-on-scroll": "^5.1.0",
     "react-clear-browser-cache": "^0.2.3",
     "react-collapsible": "^2.10.0",
+    "react-cookie": "^4.1.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-external-link": "^2.0.0",
