--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cityofzion/wallet-connect-sdk-react": "^2.1.3",
     "@fontsource/montserrat": "^4.5.13",
     "@formspree/react": "^2.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
