--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@web3-react/walletconnect-connector": "^6.2.13",
     "@web3-react/walletlink-connector": "^6.2.14",
     "animate.css": "^4.1.1",
+    "antd": "^4.23.6",
     "axios": "^0.27.2",
     "ethers": "^5.7.1",
     "express": "^4.18.1",
