--- a/package.json
+++ b/package.json
@@ -3,34 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@cityofzion/wallet-connect-sdk-react": "^2.1.3",
+    "@ethersproject/providers": "^5.7.2",
     "@fontsource/montserrat": "^4.5.13",
     "@formspree/react": "^2.4.0",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@ideasio/add-to-homescreen-react": "^1.0.10",
-    "@material-ui/core": "^4.12.4",
     "@rainbow-me/rainbowkit": "^0.7.1",
-    "@ramp-network/ramp-instant-sdk": "^3.2.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
-    "@web3-react/walletconnect-connector": "^6.2.13",
-    "@web3-react/walletlink-connector": "^6.2.14",
     "animate.css": "^4.1.1",
-    "antd": "^4.23.6",
     "axios": "^0.27.2",
+    "eslint-config-react-app": "^7.0.1",
     "ethers": "^5.7.1",
-    "express": "^4.18.1",
+    "glob": "^8.0.3",
     "react": "^18.2.0",
     "react-add-to-homescreen": "^1.1.0",
-    "react-animated-text-content": "^1.0.1",
-    "react-animation-on-scroll": "^5.1.0",
     "react-clear-browser-cache": "^0.2.3",
-    "react-collapsible": "^2.10.0",
     "react-cookie": "^4.1.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
@@ -38,38 +26,16 @@
     "react-hot-toast": "^2.4.0",
     "react-ios-pwa-prompt": "^1.8.4",
     "react-open-weather": "^1.3.0",
-    "react-pwa-add-to-homescreen": "^1.1.7",
     "react-pwa-app": "^2.2.3",
-    "react-pwa-install": "^1.0.12",
-    "react-pwa-install-prompt": "^1.0.5",
-    "react-pwa-installer-prompt": "^1.0.8",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
-    "react-select": "^5.4.0",
-    "react-simple-star-rating": "^4.0.5",
-    "react-star-rating-component": "^1.4.1",
     "react-tabs": "^5.1.0",
-    "react-text-transition": "^3.0.2",
     "react-typed": "^1.2.0",
     "react-whatsapp": "^0.3.0",
     "reactjs-popup": "^2.0.5",
     "wagmi": "^0.6.8",
-    "web-vitals": "^2.1.4",
-    "web3": "^1.8.0",
-    "web3-react": "^5.0.5",
-    "workbox-background-sync": "^6.5.4",
-    "workbox-broadcast-update": "^6.5.4",
-    "workbox-cacheable-response": "^6.5.4",
-    "workbox-core": "^6.5.4",
-    "workbox-expiration": "^6.5.4",
-    "workbox-google-analytics": "^6.5.4",
-    "workbox-navigation-preload": "^6.5.4",
-    "workbox-precaching": "^6.5.4",
-    "workbox-range-requests": "^6.5.4",
-    "workbox-routing": "^6.5.4",
-    "workbox-strategies": "^6.5.4",
-    "workbox-streams": "^6.5.4"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
