--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "@rainbow-me/rainbowkit": "^0.7.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@uauth/bnc-onboard": "^2.4.0",
+    "@uauth/js": "^2.4.0",
+    "@uauth/web3-react": "^2.4.0",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.13",
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
+    "bnc-onboard": "^1.39.1",
     "eslint-config-react-app": "^7.0.1",
     "ethers": "^5.7.1",
     "glob": "^8.0.3",
@@ -29,13 +34,14 @@
     "react-pwa-app": "^2.2.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.3",
     "react-tabs": "^5.1.0",
     "react-typed": "^1.2.0",
     "react-whatsapp": "^0.3.0",
     "reactjs-popup": "^2.0.5",
     "wagmi": "^0.6.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3modal": "^1.9.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -62,5 +68,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "16.18.0"
   }
 }
