--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-external-link": "^2.0.0",
+    "react-ga": "^3.3.1",
     "react-hot-toast": "^2.4.0",
     "react-ios-pwa-prompt": "^1.8.4",
     "react-open-weather": "^1.3.0",
