--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ctrl/react-adsense": "^1.6.1",
     "@ethersproject/providers": "^5.7.2",
     "@fontsource/montserrat": "^4.5.13",
     "@formspree/react": "^2.4.0",
