get promo params

--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "@ethersproject/providers": "^5.7.2",
     "@fontsource/montserrat": "^4.5.13",
     "@formspree/react": "^2.4.0",
-    "@rainbow-me/rainbowkit": "^0.7.1",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@uauth/bnc-onboard": "^2.4.0",
     "@web3-react/core": "^6.1.9",
@@ -15,6 +13,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "bnc-onboard": "^1.39.1",
+    "eslint": "^8.32.0",
     "eslint-config-react-app": "^7.0.1",
     "glob": "^8.0.3",
     "react": "^18.2.0",
